Refactor FutuDataConverter tests and enhance data validation commands
- Updated FutuDataConverterTest to improve test readability and assertions using AssertJ.
- Added new tests for handling corporate actions including dividends and splits with detailed assertions on adjustment factors.
- Refactored FutuMarketDataServiceImplTest to validate raw rehab data retrieval.
- Enhanced CorporateActionServiceTest to mock Futu API responses and validate corporate action processing.
- Introduced CheckDataCommand for data quality and integrity checks on historical stock data.
- Added ShowRehabCommand to display local corporate action data with detailed formatting.
- Improved integration tests for HistoricalDataService to validate backward adjustment calculations with real data.